--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Top Movies</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="favorite">Favorite</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="submit">Submit</string>
+    <string name="fill_all_fields">Please fill all fields</string>
+    <string name="genres">Genres</string>
+    <string name="last_movies">Last movies</string>
+    <string name="more_info">Get more_info</string>
+    <string name="empty_list">Not found any item !</string>
+    <string name="search_here">Search…</string>
+    <string name="summery">Summery</string>
+    <string name="writers">writers</string>
+    <string name="actors">Actors</string>
 </resources>
